test-cases/final-dump/parametric_repn.exp
Error detected during preliminary processing of module parametric_repn
[91mfinal-dump/parametric_repn.wybe:1:5: types defined by representation cannot have type parameters
[0m
